# octApp

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  run.py
app/: __init__.py  routes.py
app/services/: geometry.py  image_processing.py  orchestrator.py
app/static/js/: main.js
app/templates/: index.html
release1.0/: backend.py  octApp.py
res/anteproyecto/: Anteproyecto.aux  Anteproyecto.tex  Anteproyecto.toc
res/anteproyecto/latex/: Anteproyecto.out  Anteproyecto.tex
res/info/: TextoJustificativo
src/: oneCase.py  oneCaseCornea.py  programa.py
src/process/: processAlgorithm.py  processImage.py  processUtils.py
src/ui/: image.py  main.py  menus.py  octAbout.py  octApp.py  octView.py  oneCase.py
tests/: conftest.py  test_image_processing.py  test_routes.py
web/: app.py
web/static/js/: main.js
web/templates/: index.html
